name:               freesound
version:            0.0.1
synopsis:           Access the Freesound Project database
description:        Access the Freesound Project database
                    .
                    The Freesound Project [1] is a collaborative database of
                    Creative Commons [2] licensed sounds.
                    .
                    [1] http://www.freesound.org/
                    [2] http://www.creativecommons.org/
license:            BSD3
license-file:       LICENSE
category:           Sound, Web
copyright:          Copyright (c) Stefan Kersten 2008
author:             Stefan Kersten
maintainer:         Stefan Kersten
stability:          provisional
homepage:           http://code.haskell.org/~StefanKersten/code/freesound
tested-with:        GHC == 6.10.1
build-type:         Simple
cabal-version:      >= 1.2

library
  exposed-modules:  Sound.Freesound
  other-modules:    Sound.Freesound.Properties
                    Sound.Freesound.Query
                    Sound.Freesound.URL
                    Sound.Freesound.Util
  build-depends:    base >= 3,
                    curl == 1.3.*,
                    directory >= 1,
                    mtl == 1.1.*,
                    xml == 1.3.*

  extensions:       GeneralizedNewtypeDeriving
  
  ghc-options:      -O2 -funbox-strict-fields 

executable freesound
  hs-source-dirs:   ., freesound
  main-is:          Main.hs
  extensions:       GeneralizedNewtypeDeriving
