name:               freesound
version:            0.2.0
synopsis:           Access the Freesound Project database
description:        Access the Freesound Project database. The Freesound
                    Project is a collaborative database of Creative Commons
                    licensed sounds.
                    .
                    <http://www.freesound.org/>
                    .
                    <http://www.creativecommons.org/>
license:            BSD3
license-file:       LICENSE
category:           Sound, Web
copyright:          Copyright (c) Stefan Kersten 2008-2012
author:             Stefan Kersten <sk@k-hornz.de>
maintainer:         Stefan Kersten <sk@k-hornz.de>
stability:          experimental
homepage:           https://github.com/kaoskorobase/freesound
tested-with:        GHC == 6.10.1, GHC == 6.10.4, GHC == 6.12.1
build-type:         Simple
cabal-version:      >= 1.2

library
  exposed-modules:  Sound.Freesound.Conduit
                    Sound.Freesound.Sound
                    Sound.Freesound.Sound.Search
                    Sound.Freesound.Sound.Search.Filter
                    Sound.Freesound.Sound.Search.Query
  other-modules:    Sound.Freesound.URI
  build-depends:    base >= 3 && < 5
                  , aeson >= 0.6 && < 0.7
                  , bytestring >= 0.9 && < 1.0
                  , conduit >= 0.5 && < 0.6
                  , data-default >= 0.5 && < 0.6
                  , failure >= 0.2 && < 0.3
                  , filepath >= 1.2 && < 1.3
                  , http-conduit >= 1.6 && < 1.7
                  , http-types >= 0.7 && < 0.8
                  , monad-control >= 0.3 && < 0.4
                  , network >= 2.4 && < 2.5
                  , old-locale >= 1.0 && < 1.1
                  , text >= 0.11 && < 0.12
                  , time >= 1.2 && < 1.3
                  , transformers >= 0.3 && < 0.4

-- executable freesound
--   hs-source-dirs:   ., freesound
--   main-is:          Main.hs
